[package]
name = "focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]
